Commentaar en php-bestanden
Commentaar toegevoegd en bestanden die op de server staan toegevoegd.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <!-- Add Gyroscope
+        <!-- Go to Gyroscope
         <activity
             android:name=".Gyroscope"
             android:label="gyroscope" >
